Destination completed for responsive

--- a/Proiect-main/_variables.css
+++ b/Proiect-main/_variables.css
@@ -14,4 +14,5 @@
     --color-paleWhite: #F2F2F2;
     --color-mainWhite: #D0D6F9;
     --color-mainBlack: #0B0D17;
+    --color-mainGray:  #4f4f4f;
 }
